--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,16 +1,13 @@
 version: v1.0
-name: First pipeline example
+name: Initial Pipeline
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
-
 blocks:
-  - name: "lint"
+  - name: 'Block #1'
     task:
       jobs:
-      - name: Lint
-        commands:
-          - checkout
-          - make lint
-          - echo 1
+        - name: 'Job #1'
+          commands:
+            - checkout
